Fixed #7 Menu overlaps on browser resize.

--- a/css/nubis.css
+++ b/css/nubis.css
@@ -2,6 +2,10 @@ html {
 	height: 100%;
 }
 
+.crm-navbar{
+	min-width: 1000px;	
+}
+
 .crm-header {
 	padding-top: 45px;
 }
@@ -10,6 +14,7 @@ html {
 	color: #555;
 	background-color: #CCC;
 	height: 100%;
+	min-width: 1000px;
 }
 
 .crm-content.tabbable{
